--- a/sick-fits/backend/.env
+++ b/sick-fits/backend/.env
@@ -4,3 +4,7 @@ PRISMA_SECRET="gtb5hj6jgj6"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=2525
+MAIL_USER="34e023e86ca872"
+MAIL_PASS="510fd32e38efb1"
