--- a/sick-fits/backend/.env
+++ b/sick-fits/backend/.env
@@ -2,7 +2,7 @@ FRONTEND_URL="http://localhost:7777"
 PRISMA_ENDPOINT="https://eu1.prisma.sh/saladnights-af7b5c/sick-fits/dev"
 PRISMA_SECRET="gtb5hj6jgj6"
 APP_SECRET="jwtsecret123"
-STRIPE_SECRET="sk_123youchanget his"
+STRIPE_SECRET="sk_test_ENXud2GmPHjym0R3W8KGi0HM00EViGUQfU"
 PORT=4444
 MAIL_HOST="smtp.mailtrap.io"
 MAIL_PORT=2525
