--- a/finished-application/backend/prisma.yml
+++ b/finished-application/backend/prisma.yml
@@ -1,5 +1,5 @@
 #endpoint: ${env:PRISMA_ENDPOINT}
-endpoint: https://sick-fits-production.herokuapp.com/sick-fits-prod/prod
+endpoint: https://sf-prod-5a237eaaba.herokuapp.com/advanced-react-demo/dev
 datamodel: datamodel.graphql
 secret: ${env:PRISMA_SECRET}
 hooks:
